# mcp_debugger

./: .clang-tidy  .gitignore  CI_CD_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CODE_QUALITY_REPORT.md  Makefile  QUICK_START.md  RACE_CONDITIONS_ANALYSIS.md  README-WINDOWS.md  README.md  build.ps1  compile_commands.json  cppcheck.cfg  sample-config.json  static-analysis.ps1  ubmodule status  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd.yml  ci.yml  nightly.yml  quality-check.yml
include/mcp/: ai_provider_interface.hpp  exception_safety.hpp  interfaces.hpp  performance_optimization.hpp  security_hardening.hpp  types.hpp
scripts/: build_system.ps1  ci_cd_manager.py  demo-session.mcp  emergency_rebuild.bat  install-deps-windows.ps1  package.py  performance_tests.py  quick_start.bat  repair_project.bat  run_integration_tests.py  security_scan.py  sync_project.ps1  verify_project.bat
src/analyzer/: CMakeLists.txt  dump_analyzer.cpp  dump_analyzer.hpp
src/cli/: CMakeLists.txt  cli_interface.cpp  cli_interface.hpp  main.cpp
src/config/: CMakeLists.txt  config_manager.cpp  config_manager.hpp
src/core/: CMakeLists.txt  core_engine.cpp  core_engine.hpp
src/gui/: CMakeLists.txt
src/llm/: CMakeLists.txt  ai_providers.cpp  ai_providers.hpp  llm_engine.cpp  llm_engine.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/parser/: CMakeLists.txt  sexpr_parser.cpp  sexpr_parser.hpp
src/plugin/: CMakeLists.txt  plugin_interface.cpp  plugin_interface.hpp  plugin_main.cpp  x64dbg_sdk.hpp
src/security/: CMakeLists.txt  security_manager.cpp  security_manager.hpp
src/x64dbg/: CMakeLists.txt  plugin_exports.cpp  x64dbg_bridge.cpp  x64dbg_bridge.hpp  x64dbg_plugin.cpp
static-analysis-results/: code-quality-report.md  cppcheck-results.txt  manual-review-checklist.md
tests/: CMakeLists.txt  core_engine_improved_test.cpp  simple_test.cpp
tests/core/: core_engine_tests.cpp
tests/mocks/: mock_llm_engine.hpp  mock_x64dbg_bridge.hpp
