# GUI Module for MCP Debugger
# Currently placeholder - implement Qt or similar GUI framework later

if(NOT BUILD_GUI)
    return()
endif()

message(STATUS "GUI module is not implemented yet - skipping")

# TODO: Implement GUI using Qt or similar framework
# set(GUI_SOURCES
#     main_window.cpp
#     debugger_widget.cpp
#     llm_chat_widget.cpp
# )
# 
# set(GUI_HEADERS
#     main_window.hpp
#     debugger_widget.hpp
#     llm_chat_widget.hpp
# )
# 
# # Find Qt5 or Qt6
# find_package(Qt5 COMPONENTS Core Widgets QUIET)
# if(Qt5_FOUND)
#     add_executable(mcp-debugger-gui ${GUI_SOURCES} ${GUI_HEADERS})
#     target_link_libraries(mcp-debugger-gui
#         PRIVATE
#         mcp-core
#         Qt5::Core
#         Qt5::Widgets
#     )
# else()
#     message(WARNING "Qt5 not found - GUI will not be built")
# endif()